--- a/index.html
+++ b/index.html
@@ -33,9 +33,10 @@
         <div class="sidebar">
             <div class="profile">
                 <img src="" alt="">
+                <img src="./avt.jpg" alt="" style="border-radius: 50%;">
             </div>
         </div>
-        <div class="mainMain">mainMain</div>
+        <div class="mainMain">Nguyen Ngoc Anh</div>
     </main>
     <footer>
 
