--- a/index.html
+++ b/index.html
@@ -36,10 +36,17 @@
                 <img src="./avt.jpg" alt="" style="border-radius: 50%;">
             </div>
         </div>
-        <div class="mainMain">Nguyen Ngoc Anh</div>
+        <div class="mainMain">
+            <div>Nguyen Ngoc Anh</div>
+            <form action="">
+                <h4>Em co yeu anh khong?</h4>
+                <button class="traLoi"
+                    style="outline: none; border: none; padding: 5px 8px; background-color: red; color: white; border-radius: 10px; font-weight: 600; transition: all .3 ease-in-out; cursor: pointer;">Co</button>
+            </form>
+        </div>
     </main>
     <footer>
-
+        <div>Nguyen Ngoc Anh x Nguyen Minh Quan</div>
     </footer>
 </body>
 
