--- a/index.html
+++ b/index.html
@@ -41,7 +41,9 @@
             <form action="">
                 <h4>Em co yeu anh khong?</h4>
                 <button class="traLoi"
-                    style="outline: none; border: none; padding: 5px 8px; background-color: red; color: white; border-radius: 10px; font-weight: 600; transition: all .3 ease-in-out; cursor: pointer;">Co</button>
+                    style="outline: none; border: none; padding: 5px 8px; background-color: red; color: white; border-radius: 10px; font-weight: 600; transition: all .3 ease-in-out; cursor: pointer;">
+                    <a href="./h.html">Có ạaa</a>
+                </button>
             </form>
         </div>
     </main>
