--- a/index.html
+++ b/index.html
@@ -5,19 +5,19 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Mon</title>
-    <link rel="stylesheet" href="index.css">
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.4.2/css/all.min.css"
         integrity="sha512-z3gLpd7yknf1YoNbCzqRKc4qyor8gaKU1qmn+CShxbuBusANI9QpRohGBreCFkKxLhei6S9CQXFEbbKuqLg0DA=="
         crossorigin="anonymous" referrerpolicy="no-referrer" />
+    <link rel="stylesheet" href="index.css">
+    <link rel="stylesheet" href="./footer.css">
+    <link rel="stylesheet" href="./main.css">
 </head>
 
 <body>
     <header>
-        <div class="title">
-            <div class="avt">
-                <img src="./avt.jpg" alt="avt" class="imgAvt">
-            </div>
-            <div class="mon"><span>M</span>on</div>
+        <div class="mon"><span>M</span>
+            <img src="./mon.svg" alt="mon">
+            n
         </div>
         <div class="iconHeader">
             <i class="fa-solid fa-house"></i>
@@ -25,30 +25,48 @@
             <i class="fa-solid fa-bell"></i>
         </div>
         <div class="textInput">
-            <img src="./cat.svg" alt="cat" class="meo slide">
+            <img src="./cat.svg" alt="cat" class="meo">
             <input type="text">
         </div>
     </header>
     <main>
         <div class="sidebar">
             <div class="profile">
-                <img src="" alt="">
-                <img src="./avt.jpg" alt="" style="border-radius: 50%;">
+                <img src="./meo.jpg" alt="meo" class="themesImg">
+                <div class="imgAvatar">
+                    <img src="./img2.jpg" alt="nna" class="avt">
+                </div>
+            </div>
+            <div class="proTitle">
+                <h5>Nguyen Ngoc Anh <span>( Brenna )</span></h5>
+                <div class="socialNet">
+                    <a href="https://www.facebook.com/profile.php?id=100085656587491">
+                        <p><i class="fa-brands fa-facebook" style="color: rgb(49, 85, 248);"></i>&nbsp;Facebook</p>
+                    </a>
+                    <a href="https://www.instagram.com/brenna_nna/">
+                        <p><i class="fa-brands fa-instagram" style="color: palevioletred;"></i>&nbsp;Instagram</p>
+                    </a>
+                    <a>
+                        <p><i class="fa-brands fa-weixin" style="color: rgb(47, 255, 127);"></i>&nbsp;ruanying_nna</p>
+                    </a>
+                </div>
+            </div>
+            <div class="images">
+                <h4>Ảnh</h4>
+                <div class="listImg">
+                    <img target="_blank" href="./avt.jpg" src="./avt.jpg" alt="img1" class="listImgs">
+                    <img target="_blank" href="./img2.jpg" src="./img2.jpg" alt="img2" class="listImgs">
+                </div>
             </div>
         </div>
         <div class="mainMain">
-            <div>Nguyen Ngoc Anh</div>
-            <form action="">
-                <h4>Em co yeu anh khong?</h4>
-                <button class="traLoi"
-                    style="outline: none; border: none; padding: 5px 8px; background-color: red; color: white; border-radius: 10px; font-weight: 600; transition: all .3 ease-in-out; cursor: pointer;">
-                    <a href="./h.html">Có ạaa</a>
-                </button>
-            </form>
+
         </div>
     </main>
     <footer>
-        <div>Nguyen Ngoc Anh x Nguyen Minh Quan</div>
+        <div class="footerF" style="color: red;">
+            <span style="color: palevioletred;">Nguyen Ngoc Anh &nbsp;</span> x <span>&nbsp; Nguyen Minh Quan</span>
+        </div>
     </footer>
 </body>
 
