--- a/index.html
+++ b/index.html
@@ -40,22 +40,26 @@
             <div class="proTitle">
                 <h5>Nguyen Ngoc Anh <span>( Brenna )</span></h5>
                 <div class="socialNet">
-                    <a href="https://www.facebook.com/profile.php?id=100085656587491">
-                        <p><i class="fa-brands fa-facebook" style="color: rgb(49, 85, 248);"></i>&nbsp;Facebook</p>
+                    <a target="_blank" href="https://www.facebook.com/profile.php?id=100085656587491">
+                        <p style="color: blue;"><i class="fa-brands fa-facebook"></i>&nbsp;Facebook</p>
                     </a>
-                    <a href="https://www.instagram.com/brenna_nna/">
-                        <p><i class="fa-brands fa-instagram" style="color: palevioletred;"></i>&nbsp;Instagram</p>
+                    <a target="_blank" href="https://www.instagram.com/brenna_nna/">
+                        <p style="color: palevioletred;"><i class="fa-brands fa-instagram"></i>&nbsp;Instagram</p>
                     </a>
                     <a>
-                        <p><i class="fa-brands fa-weixin" style="color: rgb(47, 255, 127);"></i>&nbsp;ruanying_nna</p>
+                        <p style="color: rgb(0, 255, 0);"><i class="fa-brands fa-weixin"></i>&nbsp;ruanying_nna</p>
+                    </a>
+                    <a target="_blank" href="https://ngl.link/brenna_nna">
+                        <p style="color: rgb(0, 174, 255);"><i class="fa-solid fa-earth-americas"></i>&nbsp;ruanying_nna
+                        </p>
                     </a>
                 </div>
             </div>
             <div class="images">
                 <h4>Ảnh</h4>
                 <div class="listImg">
-                    <img target="_blank" href="./avt.jpg" src="./avt.jpg" alt="img1" class="listImgs">
-                    <img target="_blank" href="./img2.jpg" src="./img2.jpg" alt="img2" class="listImgs">
+                    <img target="_blank" href="avt.jpg" src="./avt.jpg" alt="img1" class="listImgs">
+                    <img target="_blank" href="img2.jpg" src="./img2.jpg" alt="img2" class="listImgs">
                 </div>
             </div>
         </div>
