--- a/index.html
+++ b/index.html
@@ -12,6 +12,7 @@
     <link rel="stylesheet" href="./footer.css">
     <link rel="stylesheet" href="./main.css">
     <link rel="icon short" href="./avt.jpg">
+    <link rel="stylesheet" href="./mobile.css">
 </head>
 
 <body>
@@ -42,16 +43,23 @@
                 <h5>Nguyen Ngoc Anh <span>( Brenna )</span></h5>
                 <div class="socialNet">
                     <a target="_blank" href="https://www.facebook.com/profile.php?id=100085656587491">
-                        <p style="color: blue;"><i class="fa-brands fa-facebook"></i>&nbsp;Facebook</p>
+                        <p style="color: blue;"><i class="fa-brands fa-facebook"></i>&nbsp;<b class="dn">Facebook</b>
+                        </p>
                     </a>
                     <a target="_blank" href="https://www.instagram.com/brenna_nna/">
-                        <p style="color: palevioletred;"><i class="fa-brands fa-instagram"></i>&nbsp;Instagram</p>
+                        <p style="color: palevioletred;"><i class="fa-brands fa-instagram"></i>&nbsp;<b class="dn">
+                                Instagram</b>
+                        </p>
                     </a>
                     <a>
-                        <p style="color: rgb(0, 255, 0);"><i class="fa-brands fa-weixin"></i>&nbsp;ruanying_nna</p>
+                        <p style="color: rgb(0, 255, 0);"><i class="fa-brands fa-weixin"></i>&nbsp;<b class="dn">
+                                ruanying_nna</b>
+                        </p>
                     </a>
                     <a target="_blank" href="https://ngl.link/brenna_nna">
-                        <p style="color: rgb(0, 174, 255);"><i class="fa-solid fa-earth-americas"></i>&nbsp;ruanying_nna
+                        <p style="color: rgb(0, 174, 255);"><i class="fa-solid fa-earth-americas"></i>&nbsp;<b
+                                class="dn">
+                                ruanying_nna</b>
                         </p>
                     </a>
                 </div>
@@ -60,7 +68,7 @@
                 <h4>Ảnh</h4>
                 <div class="listImg">
                     <img target="_blank" href="avt.jpg" src="./avt.jpg" alt="img1" class="listImgs">
-                    <img target="_blank" href="img2.jpg" src="./img2.jpg" alt="img2" class="listImgs">
+                    <img target="_blank" href="img2.jpg" src="./img2.jpg" alt="img2" class="listImgs imgI2">
                 </div>
             </div>
         </div>
