--- a/h.html
+++ b/h.html
@@ -3,17 +3,14 @@
 <HEAD>
     <style>
         canvas {
-            position: absolute;
-            left: 0;
-            top: 0;
-            width: 100%;
-            height: 100%;
+            width: 400px;
+            height: 200px;
             background-color: "#2e2e2e";
         }
     </style>
 </HEAD>
 
-<BODY style=" background-color: #000;">
+<BODY>
 
     <canvas id="heart"></canvas>
 
