--- a/index.html
+++ b/index.html
@@ -94,7 +94,7 @@
                         <div class="titleContent">🌸</div>
                         <div class="contentContent">
                             <img src="./img1.jpg" alt="i1" class="imgCon">
-                            <img src="./img2.jpg" alt="i2" class="imgCon">
+                            <img src="./img2.jpg" alt="i2" class="imgCon con">
                         </div>
                         <div class="reactContent">
                             <div class="react">
