--- a/index.html
+++ b/index.html
@@ -71,6 +71,11 @@
                     <img target="_blank" href="img2.jpg" src="./img2.jpg" alt="img2" class="listImgs imgI2">
                 </div>
             </div>
+            <div style="position: fixed; bottom: 0; left: 0;">
+                <audio controls autoplay>
+                    <source src="./anh_nho_ra.mp3" type="audio/mpeg">
+                </audio>
+            </div>
         </div>
         <div class="mainMain">
             <div class="heartCanvas">
