--- a/index.html
+++ b/index.html
@@ -72,9 +72,13 @@
                 </div>
             </div>
             <div style="position: fixed; bottom: 0; left: 0;">
-                <audio controls autoplay>
+                <audio controls autoplay id="music">
                     <source src="./anh_nho_ra.mp3" type="audio/mpeg">
                 </audio>
+                <script>
+                    let mus = document.getElementById("music")
+                    mus.volume = 0.5 
+                </script>
             </div>
         </div>
         <div class="mainMain">
