--- a/index.html
+++ b/index.html
@@ -83,7 +83,7 @@
                 </div>
                 <div>
                     <div class="profile">
-                        <img src="./assets/images/miu.jpg" alt="meo" class="themesImg">
+                        <img src="./assets/images/q1.jpg" alt="meo" class="themesImg">
                         <div class="imgAvatar">
                             <img src="./assets/images/q1.jpg" alt="nna" class="avt">
                         </div>
