--- a/index.html
+++ b/index.html
@@ -25,9 +25,12 @@
                 n
             </div>
             <div class="iconHeader">
-                <i class="fa-solid fa-house"></i>
-                <i class="fa-solid fa-envelope"></i>
-                <i class="fa-solid fa-bell"></i>
+                <a href="">
+                    <div class="imageIconHeader"><img src="" alt="">events</div>
+                </a>
+                <a target="_blank" href="./inlove.html">
+                    <div class="imageIconHeader"><img src="./assets/images/favicon.png" alt="inlove">inlove</div>
+                </a>
             </div>
             <div class="textInput">
                 <img src="./assets/images/cat.svg" alt="cat" class="meo">
