--- a/index.html
+++ b/index.html
@@ -81,10 +81,10 @@
                     <div class="images">
                         <h4>Mon</h4>
                         <div class="listImg">
-                            <img target="_blank" href="mon2.jpg" src="./assets/images/mon2.jpg" alt="img1"
-                                class="listImgs">
-                            <img target="_blank" href="mon1.jpg" src="./assets/images/mon1.jpg" alt="img2"
-                                class="listImgs">
+                            <img target="_blank" href="./assets/images/mon2.jpg" src="./assets/images/mon2.jpg"
+                                alt="img1" class="listImgs">
+                            <img target="_blank" href="./assets/images/mon1.jpg" src="./assets/images/mon1.jpg"
+                                alt="img2" class="listImgs">
                         </div>
                     </div>
                 </div>
@@ -101,7 +101,6 @@
                             </a>
                             <a target="_blank" href="https://q-music-green.vercel.app/">
                                 <p style="color: yellow;"><i class="fa-solid fa-q"></i>
-
                                 </p>
                             </a>
                         </div>
@@ -111,8 +110,10 @@
                     <div class="images">
                         <h4>Bunn</h4>
                         <div class="listImg">
-                            <img target="_blank" href="q2.jpg" src="./assets/images/q2.jpg" alt="img1" class="listImgs">
-                            <img target="_blank" href="q3.jpg" src="./assets/images/q3.jpg" alt="img2" class="listImgs">
+                            <img target="_blank" href="./assets/images/q2.jpg" src="./assets/images/q2.jpg" alt="img1"
+                                class="listImgs">
+                            <img target="_blank" href="./assets/images/q3.jpg" src="./assets/images/q3.jpg" alt="img2"
+                                class="listImgs">
                         </div>
                     </div>
                 </div>
