--- a/index.html
+++ b/index.html
@@ -81,10 +81,12 @@
                     <div class="images">
                         <h4>Mon</h4>
                         <div class="listImg">
-                            <img target="_blank" href="./assets/images/mon2.jpg" src="./assets/images/mon2.jpg"
-                                alt="img1" class="listImgs">
-                            <img target="_blank" href="./assets/images/mon1.jpg" src="./assets/images/mon1.jpg"
-                                alt="img2" class="listImgs">
+                            <a target="_blank" href="./assets/images/mon2.jpg">
+                                <img src="./assets/images/mon2.jpg" alt="img1" class="listImgs">
+                            </a>
+                            <a target="_blank" href="./assets/images/mon1.jpg">
+                                <img src="./assets/images/mon1.jpg" alt="img2" class="listImgs">
+                            </a>
                         </div>
                     </div>
                 </div>
@@ -110,10 +112,12 @@
                     <div class="images">
                         <h4>Bunn</h4>
                         <div class="listImg">
-                            <img target="_blank" href="./assets/images/q2.jpg" src="./assets/images/q2.jpg" alt="img1"
-                                class="listImgs">
-                            <img target="_blank" href="./assets/images/q3.jpg" src="./assets/images/q3.jpg" alt="img2"
-                                class="listImgs">
+                            <a target="_blank" href="./assets/images/q2.jpg">
+                                <img src="./assets/images/q2.jpg" alt="img1" class="listImgs">
+                            </a>
+                            <a target="_blank" href="./assets/images/q3.jpg">
+                                <img src="./assets/images/q3.jpg" alt="img2" class="listImgs">
+                            </a>
                         </div>
                     </div>
                 </div>
