--- a/index.html
+++ b/index.html
@@ -49,7 +49,8 @@
         <main>
             <!--sidebar-->
             <div class="sidebar">
-                <button class="accordion" style="background-color: rgba(240, 141, 240, 0.8);">
+                <button class="accordion" style="background-color: rgba(240, 141, 240, 0.8);"
+                    onclick="myFunction(this)">
                     <div class="profile">
                         <img src="./assets/images/img2.jpg" alt="meo" class="themesImg">
                     </div>
@@ -76,6 +77,11 @@
                             </a>
                         </div>
                     </div>
+                    <div class="container">
+                        <div class="bar1"></div>
+                        <div class="bar2"></div>
+                        <div class="bar3"></div>
+                    </div>
                 </button>
                 <div class="panel">
                     <div class="images">
@@ -90,7 +96,8 @@
                         </div>
                     </div>
                 </div>
-                <button class="accordion" style="background-color: rgba(115, 234, 255, 0.8);">
+                <button class="accordion" style="background-color: rgba(115, 234, 255, 0.8);"
+                    onclick="myFunction(this)">
                     <div class="profile">
                         <img src="./assets/images/q1.jpg" alt="meo" class="themesImg">
                     </div>
@@ -106,6 +113,11 @@
                                 </p>
                             </a>
                         </div>
+                    </div>
+                    <div class="container">
+                        <div class="bar1"></div>
+                        <div class="bar2"></div>
+                        <div class="bar3"></div>
                     </div>
                 </button>
                 <div class="panel">
@@ -329,6 +341,11 @@
     </section>
     <script src="./scripts/panel.js"></script>
     <script src="./scripts/heart.js"></script>
+    <script>
+        function myFunction(x) {
+            x.classList.toggle("change");
+        }
+    </script>
 </body>
 
 </html>
